--- a/angular/src/app/modules/doctors/doctor-availability/doctor-availability.component.html
+++ b/angular/src/app/modules/doctors/doctor-availability/doctor-availability.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h3>{{doctorName}} Available Dates</h3>
-    <ng-container>
+    <ng-container *ngIf="doctorAvailabilities && doctorAvailabilities.length > 0; else noDataTemplate">
         <table class="table table-bordered mt-3 align-items-center">
             <thead>
                 <tr>
@@ -11,18 +11,22 @@
                 </tr>
             </thead>
             <tbody>
-               @for (doctorAvailability of doctorAvailabilities; track $index) 
-               {
-                <tr>
-                    <td class="text-center">{{doctorAvailability.day}}</td>
-                    <td class="text-center">{{doctorAvailability.start | date: 'dd:mM:yyyy hh:mm a'}}</td>
-                    <td class="text-center">{{doctorAvailability.end | date: 'shortTime'}}</td>
+                <tr *ngFor="let doctorAvailability of doctorAvailabilities; trackBy: trackByFn">
+                    <td class="text-center">{{ doctorAvailability.day }}</td>
+                    <td class="text-center">{{ doctorAvailability.start | date: 'dd:MM:yyyy hh:mm a' }}</td>
+                    <td class="text-center">{{ doctorAvailability.end | date: 'shortTime' }}</td>
                     <td class="text-center">
                         <a class="btn btn-primary">Book an Appointment</a>
                     </td>
                 </tr>
-               }
             </tbody>
         </table>
     </ng-container>
+
+    <ng-template #noDataTemplate>
+        <div class="text-center mt-5">
+            <i class="bi bi-calendar-x fs-1 text-danger"></i>
+            <p class="mt-3 fs-4 text-muted">No available dates for {{doctorName}} at the moment.</p>
+        </div>
+    </ng-template>
 </div>
