--- a/angular/src/app/modules/doctors/doctor-availability/doctor-availability.component.html
+++ b/angular/src/app/modules/doctors/doctor-availability/doctor-availability.component.html
@@ -26,7 +26,7 @@
     <ng-template #noDataTemplate>
         <div class="text-center mt-5">
             <i class="bi bi-calendar-x fs-1 text-danger"></i>
-            <p class="mt-3 fs-4 text-muted">No available dates for {{doctorName}} at the moment.</p>
+            <p class="mt-3 fs-4 text-muted">No available dates at the moment.</p>
         </div>
     </ng-template>
 </div>
